--- a/saas/pages/_home.scss
+++ b/saas/pages/_home.scss
@@ -9,7 +9,7 @@
 .section-accommodations {
   text-align: center;
   width: min(100%, 80rem);
-  margin: 0 auto;
+  margin: 10rem auto;
 
   &__picture {
 
