--- a/saas/main.scss
+++ b/saas/main.scss
@@ -14,7 +14,7 @@
 @use "components/slider";
 
 @use "layout/header";
-@use  "layout/grid";
 @use "layout/footer";
 @use "layout/navigation";
 @use "layout/popup";
+@use "layout/gallery";
