refacto(): clean and delete useless code

--- a/saas/components/_buttons.scss
+++ b/saas/components/_buttons.scss
@@ -1,102 +1,2 @@
 @use "../abstracts/variables";
-
-
-.btn {
-  
-  &,
-  &:link,
-  &:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 5rem;
-    position: relative;
-    transition: all 0.2s;
-    font-size: 1.6rem;
-    border: none;
-    cursor: pointer;
-  }
-
-  &:hover{
-    transform: translateY(-0.3rem);
-    box-shadow: 0rem 1rem 2rem rgba(variables.$color-black, 0.2);
-  }
-
-  &:active, &:focus  {
-    transform: translateY(0.1rem);
-    box-shadow: 0rem 0.5rem 1rem rgba(variables.$color-black, 0.2);
-  }
-
-  &--white {
-    background-color: variables.$color-white;
-    color: variables.$color-grey-dark;
-
-    &::after {
-      background-color: variables.$color-white;
-    }
-  }
-
-  &--green {
-    background-color: variables.$color-primary;
-    color: variables.$color-white;
-
-    &::after {
-      background-color: variables.$color-primary;
-    }
-  }
-
-  &--primary {
-    background-color: var(--color7);
-    color: var(--white);
-
-    &::after {
-      background-color: var(--color8);
-    }
-  }
-
-  &::after {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 10rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all 0.4s;
-  }
-
-  &:hover::after {
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
-  }
-
-  &--animated {
-    animation: moveInBottom 0.4s ease-out 0.75s;
-    animation-fill-mode: backwards;
-  }
-}
-
-.btn-text {
-  display: inline-block;
-  font-size: 1.8rem;
-  padding: .8rem;
-  color: variables.$color-primary-dark;
-  transition: all .4s;
-  text-decoration: none;
-  border-bottom: 1px solid variables.$color-primary-light;
-
-  &:hover {
-    transform: translateY(-.2rem);
-    box-shadow: 0 .5rem 1rem rgba(variables.$color-black, 0.2);
-    border-radius: .5rem;
-    background-color: variables.$color-primary-light;
-    color: white;
-  }
-
-  &:active {
-    transform: translate(0);
-  }
-}
+@use "../abstracts/mixins";
