--- a/saas/layout/_header.scss
+++ b/saas/layout/_header.scss
@@ -17,7 +17,7 @@
     margin: 5px 0;
 
     &-img {
-      width: 20rem;
+      width: 15rem;
     }
   }
 
@@ -37,5 +37,32 @@
     color: var(--color12);
     text-decoration: none;
     text-transform: uppercase;
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 1rem;
+    display: block;
+
+    &:hover &__graphic--slide {
+      transform: translate3d(-66.6%, 0, 0);
+    }
+
+    &__graphic {
+      position: absolute;
+      top: 0;
+      left: 0;
+      pointer-events: none;
+      fill: none;
+      stroke: #000;
+      stroke-width: 1px;
+      width: 30rem;
+
+      &--slide {
+        top: -3px;
+        stroke-width: 2px;
+        transition: transform 0.7s;
+        transition-timing-function: cubic-bezier(0, 0.25, 0.5, 1);
+      }
+    }
+
   }
 }
