--- a/saas/main.scss
+++ b/saas/main.scss
@@ -10,11 +10,10 @@
 @use "pages/home";
 
 @use "components/buttons";
-@use "components/bg-video";
 @use "components/slider";
+@use "components/gallery";
 
 @use "layout/header";
 @use "layout/footer";
 @use "layout/navigation";
 @use "layout/popup";
-@use "layout/gallery";
