--- a/saas/main.css
+++ b/saas/main.css
@@ -296,15 +296,15 @@ body {
   }
 }
 
-.section-home {
+.section-slider {
   height: auto;
-  margin-top: 7rem;
+  margin-top: 6rem;
 }
 
 .section-accommodations {
   text-align: center;
   width: min(100%, 80rem);
-  margin: 10rem auto;
+  margin: 3rem auto;
 }
 .section-accommodations__picture-img {
   width: 100%;
@@ -321,117 +321,19 @@ body {
   margin-bottom: 4rem;
 }
 
-.btn, .btn:link, .btn:visited {
-  text-transform: uppercase;
-  text-decoration: none;
-  padding: 1.5rem 4rem;
-  display: inline-block;
-  border-radius: 5rem;
-  position: relative;
-  transition: all 0.2s;
-  font-size: 1.6rem;
-  border: none;
-  cursor: pointer;
-}
-.btn:hover {
-  transform: translateY(-0.3rem);
-  box-shadow: 0rem 1rem 2rem rgba(0, 0, 0, 0.2);
-}
-.btn:active, .btn:focus {
-  transform: translateY(0.1rem);
-  box-shadow: 0rem 0.5rem 1rem rgba(0, 0, 0, 0.2);
-}
-.btn--white {
-  background-color: white;
-  color: #777;
-}
-.btn--white::after {
-  background-color: white;
-}
-.btn--green {
-  background-color: #55c57a;
-  color: white;
-}
-.btn--green::after {
-  background-color: #55c57a;
-}
-.btn--primary {
-  background-color: var(--color7);
-  color: var(--white);
-}
-.btn--primary::after {
-  background-color: var(--color8);
-}
-.btn::after {
-  content: "";
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  border-radius: 10rem;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  transition: all 0.4s;
-}
-.btn:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0;
-}
-.btn--animated {
-  -webkit-animation: moveInBottom 0.4s ease-out 0.75s;
-          animation: moveInBottom 0.4s ease-out 0.75s;
-  -webkit-animation-fill-mode: backwards;
-          animation-fill-mode: backwards;
-}
-
-.btn-text {
-  display: inline-block;
-  font-size: 1.8rem;
-  padding: 0.8rem;
-  color: #28b485;
-  transition: all 0.4s;
-  text-decoration: none;
-  border-bottom: 1px solid #7ed56f;
-}
-.btn-text:hover {
-  transform: translateY(-0.2rem);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-  border-radius: 0.5rem;
-  background-color: #7ed56f;
-  color: white;
-}
-.btn-text:active {
-  transform: translate(0);
-}
-
-.bg-video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  z-index: -1;
-  opacity: 0.2;
-}
-.bg-video__content {
-  height: 100%;
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
 .slideshow {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
   position: relative;
+  height: 50rem;
 }
 .slideshow__image {
   -webkit-animation: scaleIn 1s ease-out;
           animation: scaleIn 1s ease-out;
   width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
 }
 .slideshow__title {
   background-color: rgba(0, 0, 0, 0.5);
@@ -444,47 +346,47 @@ body {
   -webkit-animation: moveInLeft 1s ease-out;
           animation: moveInLeft 1s ease-out;
 }
+@media only screen and (max-width: 37.5em) {
+  .slideshow__title {
+    right: 0rem;
+    bottom: 0rem;
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 37.5em) and (max-width: 56.25em) {
+  .slideshow__title {
+    right: 0rem;
+    bottom: 0rem;
+    width: 100%;
+  }
+}
 .slideshow__title-main {
   font-size: 3rem;
   font-weight: 500;
+}
+@media only screen and (max-width: 37.5em) {
+  .slideshow__title-main {
+    font-size: 2.5rem;
+  }
+}
+@media only screen and (min-width: 37.5em) and (max-width: 56.25em) {
+  .slideshow__title-main {
+    font-size: 2.5rem;
+  }
 }
 .slideshow__title-sub {
   font-size: 2rem;
   font-weight: 100;
 }
-
-.header {
-  position: fixed;
-  background-color: var(--color1);
-  display: flex;
-  flex-wrap: wrap;
-  height: auto;
-  justify-content: space-around;
-  margin: 0 auto;
-  width: 100%;
-  box-shadow: var(--shadow);
-  z-index: 10;
+@media only screen and (max-width: 37.5em) {
+  .slideshow__title-sub {
+    font-size: 1.5rem;
+  }
 }
-.header__logo {
-  margin: 5px 0;
-}
-.header__logo-img {
-  width: 20rem;
-}
-.header__nav {
-  display: flex;
-  align-items: center;
-}
-.header__list {
-  display: flex;
-  gap: 2rem;
-  list-style: none;
-}
-.header__link {
-  font-size: 1.5rem;
-  color: var(--color12);
-  text-decoration: none;
-  text-transform: uppercase;
+@media only screen and (min-width: 37.5em) and (max-width: 56.25em) {
+  .slideshow__title-sub {
+    font-size: 1.5rem;
+  }
 }
 
 .gallery {
@@ -545,4 +447,61 @@ body {
      object-fit: cover;
   -o-object-position: center;
      object-position: center;
+}
+
+.header {
+  position: fixed;
+  background-color: var(--color1);
+  display: flex;
+  flex-wrap: wrap;
+  height: auto;
+  justify-content: space-around;
+  margin: 0 auto;
+  width: 100%;
+  box-shadow: var(--shadow);
+  z-index: 10;
+}
+.header__logo {
+  margin: 5px 0;
+}
+.header__logo-img {
+  width: 15rem;
+}
+.header__nav {
+  display: flex;
+  align-items: center;
+}
+.header__list {
+  display: flex;
+  gap: 2rem;
+  list-style: none;
+}
+.header__link {
+  font-size: 1.5rem;
+  color: var(--color12);
+  text-decoration: none;
+  text-transform: uppercase;
+  position: relative;
+  overflow: hidden;
+  padding-bottom: 1rem;
+  display: block;
+}
+.header__link:hover .header__link__graphic--slide {
+  transform: translate3d(-66.6%, 0, 0);
+}
+.header__link__graphic {
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  fill: none;
+  stroke: #000;
+  stroke-width: 1px;
+  width: 30rem;
+}
+.header__link__graphic--slide {
+  top: -3px;
+  stroke-width: 2px;
+  transition: transform 0.7s;
+  transition-timing-function: cubic-bezier(0, 0.25, 0.5, 1);
 }/*# sourceMappingURL=main.css.map */
