--- a/saas/layout/_footer.scss
+++ b/saas/layout/_footer.scss
@@ -2,6 +2,11 @@
 @use "../abstracts/mixins" as *;
 
 .footer {
+    padding-top: 20rem;
+    height: auto;
 
-
+    &__image{
+        width: 100%;
+        transform: translateY(4px);
+    }
 }
