--- a/saas/base/_utils.scss
+++ b/saas/base/_utils.scss
@@ -47,3 +47,11 @@
         margin-top: 1rem !important;
     }
 }
+
+.u-align-left{
+    text-align: left !important;
+}
+
+.u-align-right{
+    text-align: right !important;
+}
