--- a/saas/components/_buttons.scss
+++ b/saas/components/_buttons.scss
@@ -1,2 +1,13 @@
 @use "../abstracts/variables";
 @use "../abstracts/mixins";
+
+.btn {
+    text-transform: uppercase;
+    padding: 1.5rem 4rem;
+    font-weight: 600;
+
+    &--primary {
+        color: var(--color3);
+        background-color: var(--color9);
+    }
+}
