--- a/saas/layout/_header.scss
+++ b/saas/layout/_header.scss
@@ -43,7 +43,7 @@
     display: block;
 
     &:hover &__graphic--slide {
-      transform: translate3d(-66.6%, 0, 0);
+      transform: translateX(-66.6%);
     }
 
     &__graphic {
