--- a/saas/main.css
+++ b/saas/main.css
@@ -74,6 +74,11 @@ body {
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 ::-moz-selection {
   background-color: var(--color8);
   color: white;
@@ -208,9 +213,21 @@ body {
   }
 }
 .heading-primary {
-  font-size: 4rem;
+  font-size: 5rem;
   font-weight: 100;
   font-family: "Dancing Script", cursive;
+  color: var(--color11);
+}
+
+.heading-secondary {
+  text-transform: uppercase;
+  color: var(--color11);
+  font-size: 3.5rem;
+}
+
+.heading-tertiary {
+  font-weight: 300;
+  font-size: 3rem;
 }
 
 .paragraph {
@@ -296,22 +313,25 @@ body {
   }
 }
 
+.u-align-left {
+  text-align: left !important;
+}
+
+.u-align-right {
+  text-align: right !important;
+}
+
 .section-slider {
   height: auto;
   margin-top: 6rem;
 }
 
 .section-accommodations {
-  text-align: center;
-  width: min(100%, 80rem);
+  width: 80%;
   margin: 3rem auto;
 }
-.section-accommodations__picture-img {
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
+.section-accommodations h1 {
+  text-align: center;
 }
 
 .separator {
@@ -319,6 +339,16 @@ body {
   justify-content: center;
   margin-top: 4rem;
   margin-bottom: 4rem;
+}
+
+.btn {
+  text-transform: uppercase;
+  padding: 1.5rem 4rem;
+  font-weight: 600;
+}
+.btn--primary {
+  color: var(--color3);
+  background-color: var(--color9);
 }
 
 .slideshow {
@@ -390,13 +420,25 @@ body {
 }
 
 .gallery {
-  background-color: var(--color2);
+  background-color: var(--color1);
   grid-area: gallery;
   display: grid;
   grid-template: repeat(7, 5vw)/repeat(8, 1fr);
-  gap: 1.5rem;
-  padding: 1.5rem;
-  grid-template-areas: "p1  p1  p2  p2  p2  p3  p4  p4" "p1  p1  p2  p2  p2  p3  p4  p4" "p5  p5  p2  p2  p2  p8  p8  p9" "p5  p5  p6  p6  p7  p8  p8  p9" "p5  p5  p6  p6  p13 p13 p13 p9" "p10 p11 p11 p12 p13 p13 p13 p14" "p10 p11 p11 p12 p13 p13 p13 p14";
+  gap: 1rem;
+  padding: 1rem;
+  grid-template-areas: "p1  p1  p2  p2  p2  p3  p3  p4" "p1  p1  p2  p2  p2  p3  p3  p4" "p5  p5  p2  p2  p2  p8  p8  p9" "p5  p5  p6  p6  p7  p8  p8  p9" "p5  p5  p6  p6  p13 p13 p13 p9" "p10 p11 p11 p12 p13 p13 p13 p14" "p10 p11 p11 p12 p13 p13 p13 p14";
+}
+@media only screen and (max-width: 37.5em) {
+  .gallery {
+    gap: 0.5rem;
+    padding: 0.5rem;
+  }
+}
+@media only screen and (min-width: 37.5em) and (max-width: 56.25em) {
+  .gallery {
+    gap: 0.5rem;
+    padding: 0.5rem;
+  }
 }
 .gallery__item--1 {
   grid-area: p1;
@@ -449,6 +491,68 @@ body {
      object-position: center;
 }
 
+.accommodation {
+  display: flex;
+  gap: 15rem;
+  margin-bottom: 15rem;
+}
+.accommodation--2 {
+  flex-direction: row-reverse;
+}
+.accommodation__images {
+  flex: 0 0 50%;
+  position: relative;
+  align-self: center;
+}
+.accommodation__images img {
+  outline: 1px solid var(--color6);
+  outline-offset: 0.8rem;
+}
+.accommodation__images--1 {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.accommodation__images--2 {
+  position: absolute;
+  width: 35%;
+  height: 85%;
+  top: 30%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.accommodation__images--2--right {
+  left: 85%;
+}
+.accommodation__images--2--left {
+  right: 80%;
+}
+.accommodation__details {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.accommodation__details__image {
+  position: absolute;
+  top: -3.5rem;
+  width: 20rem;
+}
+.accommodation__details__heading--pinsons {
+  color: #382FA6;
+}
+.accommodation__details h2 {
+  border-bottom: 1px solid currentColor;
+  position: relative;
+}
+.accommodation__details p {
+  font-size: 1.8rem;
+  text-align: right;
+}
+.accommodation__details a {
+  align-self: center;
+  font-size: 2rem;
+}
+
 .header {
   position: fixed;
   background-color: var(--color1);
@@ -487,7 +591,7 @@ body {
   display: block;
 }
 .header__link:hover .header__link__graphic--slide {
-  transform: translate3d(-66.6%, 0, 0);
+  transform: translateX(-66.6%);
 }
 .header__link__graphic {
   position: absolute;
@@ -504,4 +608,13 @@ body {
   stroke-width: 2px;
   transition: transform 0.7s;
   transition-timing-function: cubic-bezier(0, 0.25, 0.5, 1);
+}
+
+.footer {
+  padding-top: 20rem;
+  height: auto;
+}
+.footer__image {
+  width: 100%;
+  transform: translateY(4px);
 }/*# sourceMappingURL=main.css.map */
