--- a/saas/main.scss
+++ b/saas/main.scss
@@ -12,6 +12,7 @@
 @use "components/buttons";
 @use "components/slider";
 @use "components/gallery";
+@use "components/accommodations";
 
 @use "layout/header";
 @use "layout/footer";
