--- a/saas/main.scss
+++ b/saas/main.scss
@@ -13,6 +13,8 @@
 @use "components/slider";
 @use "components/gallery";
 @use "components/accommodations";
+@use "components/presentation";
+@use "components/services";
 
 @use "layout/header";
 @use "layout/footer";
