--- a/saas/base/_base.scss
+++ b/saas/base/_base.scss
@@ -16,7 +16,7 @@
   --color12: hsl(20, 30.0%, 19.0%); // High-contrast text
 
   --white: white;
-
+  --primary-color: #A68B2F;
   --shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
 }
 
