--- a/saas/components/_buttons.scss
+++ b/saas/components/_buttons.scss
@@ -1,10 +1,15 @@
-@use "../abstracts/variables";
-@use "../abstracts/mixins";
+@use "../abstracts/variables" as *;
+@use "../abstracts/mixins" as *;
 
 .btn {
     text-transform: uppercase;
     padding: 1.5rem 4rem;
     font-weight: 600;
+    text-align: center;
+
+    @include respond(phone, tab-port) {
+        padding: 1rem 2rem;
+    }
 
     &--primary {
         color: var(--color3);
