--- a/saas/layout/_header.scss
+++ b/saas/layout/_header.scss
@@ -8,6 +8,7 @@
   flex-wrap: wrap;
   height: auto;
   justify-content: space-around;
+  align-items: center;
   margin: 0 auto;
   width: 100%;
   box-shadow: var(--shadow);
