--- a/saas/base/_typography.scss
+++ b/saas/base/_typography.scss
@@ -11,11 +11,19 @@
   text-transform: uppercase;
   color: var(--primary-color);
   font-size: 3.5rem;
+
+  @include respond(phone, tab-port) {
+    font-size: 2.5rem;
+  }
 }
 
 .heading-tertiary {
   font-weight: 300;
   font-size: 3rem;
+
+  @include respond(phone, tab-port) {
+    font-size: 2.2rem;
+  }
 }
 
 .paragraph {
