--- a/saas/components/_buttons.scss
+++ b/saas/components/_buttons.scss
@@ -6,9 +6,11 @@
     padding: 1.5rem 4rem;
     font-weight: 600;
     text-align: center;
+    font-size: 1.5rem;
 
     @include respond(phone, tab-port) {
         padding: 1rem 2rem;
+        font-size: 1.2rem;
     }
 
     &--primary {
