hotfix(images): correct the error with images path after vite build not best practice but waiting for better correction

--- a/saas/pages/_home.scss
+++ b/saas/pages/_home.scss
@@ -16,7 +16,7 @@
 }
 
 .section-area_presentation {
-  background-image: url("/img/ext_2.webp");
+  background-image: url("/assets/ext_2.webp");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -25,7 +25,7 @@
 }
 
 .image-separator {
-  background-image: url("/img/ext_chats.webp");
+  background-image: url("/assets/ext_chats.webp");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
